# toge

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  dev-gui.sh  release-gui.sh  release-notes.md  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: auto-tag-stable.yml  beta-release.yml  checks.yml  ci.yml  nightly-release.yml  nightly.yml  package-binaries.yml  package-gui-arm64.yml  pr-automation.yml  promote-stable.yml  release-pr.yml  release.yml  stale.yml
ndl/: Cargo.toml
ndl/src/: main.rs  tests.rs
ndl/tests/: cli_integration.rs
needle-core/: Cargo.toml
needle-core/examples/: bench.rs  profile.rs
needle-core/src/: config.rs  db.rs  highlight.rs  index.rs  ipc.rs  lib.rs  matcher.rs  opts.rs  query.rs  sort.rs  walker.rs
needle-core/src/config/: tests.rs
needle-core/src/db/: tests.rs
needle-core/src/highlight/: tests.rs
needle-core/src/index/: performance_tests.rs  tests.rs
needle-core/src/ipc/: tests.rs
needle-core/src/matcher/: tests.rs
needle-core/src/opts/: tests.rs
needle-core/src/query/: tests.rs
needle-core/src/sort/: tests.rs
needle-core/src/sys/: linux.rs  mod.rs  tests.rs
needle-core/src/walker/: tests.rs
needle-core/tests/: workspace_smoke.rs
needled/: Cargo.toml
needled/src/: main.rs  tests.rs
needled/tests/: daemon_lifecycle.rs
scripts/: bench.sh  perf.sh  setcap-toged.sh
scripts/release/: lib.sh  next-beta-tag.sh  package-artifacts.sh  package-gui-artifacts.sh  publish-crates.sh  set-version.sh  update-changelog.sh  verify-tag.sh
toge/: Cargo.toml  README.md
toge-core/: Cargo.toml  README.md
toge-core/src/: config.rs  db.rs  index.rs  ipc.rs  matcher.rs  query.rs  sort.rs  walker.rs
toge-core/src/config/: tests.rs
toge-core/src/db/: tests.rs
toge-core/src/index/: tests.rs
toge-core/src/ipc/: tests.rs
toge-core/src/matcher/: tests.rs
toge-core/src/query/: tests.rs
toge-core/src/sys/: fanotify.rs  linux.rs  mod.rs  tests.rs
toge-core/src/walker/: tests.rs
toge-core/tests/: workspace_smoke.rs
toge-gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
toge-gui/src/: App.svelte  env.d.ts  main.ts
toge-gui/src-tauri/: Cargo.toml  tauri.conf.json
toge-gui/src-tauri/icons/: icon.icns
toge-gui/src-tauri/linux/: post-install.sh
toge-gui/src-tauri/src/: actions.rs  commands.rs  format.rs  global_hotkeys.rs  ipc_client.rs  keyboard.rs  lib.rs  main.rs  state.rs  tray.rs
toge-gui/src/components/: ContextMenu.svelte  DiagnosticsPanel.svelte  ErrorToast.svelte  OptionsWindow.svelte  ResultTable.svelte  SearchBar.svelte  StatusBar.svelte
toge-gui/src/lib/: keyboardStore.svelte.ts  searchStore.svelte.ts  searchStore.ts  types.ts
toge-gui/tests/: ipc_integration.rs  main.test.ts  setup.ts
toge-gui/tests/components/: OptionsWindow.test.ts  ResultTable.test.ts  SearchBar.test.ts  StatusBar.test.ts
toge-gui/tests/stores/: keyboardStore.test.ts  search.test.ts
toge-gui/tests/utils/: format.test.ts
toge/src/: main.rs  tests.rs
toge/tests/: cli_integration.rs
toged/: Cargo.toml  README.md
toged/src/: main.rs  tests.rs
toged/tests/: daemon_lifecycle.rs
