[workspace]
members = ["needle-core", "needled", "ndl"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["fishdaa <git@fishda.net>"]
license = "Apache-2.0"
repository = "https://github.com/fishdaa/needle"

[workspace.dependencies]
needle-core = { version = "0.1.4", path = "needle-core" }
