[workspace]
members = ["toge-core", "toged", "toge", "toge-gui/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.15"
edition = "2024"
authors = ["fishdaa <git@fishda.net>"]
license = "Apache-2.0"
repository = "https://github.com/fishdaa/needle"

[workspace.dependencies]
toge-core = { package = "toge-core", version = "0.1.15", path = "toge-core" }
