[package]
name = "ndl"
description = "CLI client for querying the Needle search daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ndl"
path = "src/main.rs"

[dependencies]
needle-core.workspace = true

[dev-dependencies]
tempfile = "3"
