[package]
name = "toge-core"
description = "Shared indexing, query parsing, and IPC primitives for Toge"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "toge_core"

[features]
default = []
# Enable only if raw FFI declarations are not used; otherwise pure stdlib.
use_libc = ["libc"]

[dependencies]
# 0-1 external dependency rule. libc is optional; raw FFI is preferred.
libc = { version = "0.2", optional = true }
# Regex engine for the regex: modifier and -r flag (single approved external dep)
regex = "1"

[dev-dependencies]
# Used only by tests; not linked into release builds.
tempfile = "3"
