[package]
name = "toge"
description = "CLI client for querying the Toge search daemon"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "toge"
path = "src/main.rs"

[dependencies]
toge-core.workspace = true

[dev-dependencies]
tempfile = "3"
