[package]
name = "toged"
description = "Daemon for building and serving the Toge filesystem index"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "toged"
path = "src/main.rs"

[dependencies]
libc = "0.2"
toge-core.workspace = true

[dev-dependencies]
tempfile = "3"
