[package]
name = "toge-gui-lib"
description = "Desktop GUI for Toge search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "toge-gui"
path = "src/main.rs"

[lib]
name = "toge_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
toge-core.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
